--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\""
   },
+  "lint-staged": {
+    "*": "eslint --fix"
+  },
   "dependencies": {
     "admin-bro": "^4.0.1",
     "admin-bro-expressjs": "^2.1.1",
@@ -32,6 +35,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-node": "^11.1.0",
     "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "nodemon": "^1.19.4"
   }
 }
