--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
     "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "pdfmake": "^0.2.5"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
