--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "pdfmake": "^0.2.5"
