--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,4 +4,100 @@ services:
   node-app:
     command: npm start
     environment:
-      - NODE_ENV=prod
+      - MONGODB_URL=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/enormoDB?retryWrites=true&w=majority
+    depends_on:
+      - mongo-setup
+      - mongo1
+      - mongo2
+      - mongo3
+  mongo-setup:
+    container_name: mongo-setup
+    image: mongo
+    restart: on-failure
+    networks:
+      default:
+    volumes:
+      - ./scripts:/scripts
+    entrypoint: ['/scripts/setup.sh'] # Make sure this file exists (see below for the setup.sh)
+    depends_on:
+      - mongo1
+      - mongo2
+      - mongo3
+
+  mongo1:
+    hostname: mongo1
+    container_name: localmongo1
+    image: mongo
+    expose:
+      - 27017
+    ports:
+      - 27017:27017
+    restart: always
+    entrypoint:
+      [
+        '/usr/bin/mongod',
+        '--quiet',
+        '--logpath',
+        '/dev/null',
+        '--bind_ip_all',
+        '--replSet',
+        'rs0',
+        '--journal',
+        '--dbpath',
+        '/data/db',
+      ]
+    volumes:
+      - mongo_data1:/data
+  mongo2:
+    hostname: mongo2
+    container_name: localmongo2
+    image: mongo
+    expose:
+      - 27017
+    ports:
+      - 27018:27017
+    restart: always
+    entrypoint:
+      [
+        '/usr/bin/mongod',
+        '--quiet',
+        '--logpath',
+        '/dev/null',
+        '--bind_ip_all',
+        '--replSet',
+        'rs0',
+        '--journal',
+        '--dbpath',
+        '/data/db',
+      ]
+    volumes:
+      - mongo_data2:/data
+  mongo3:
+    hostname: mongo3
+    container_name: localmongo3
+    image: mongo
+    expose:
+      - 27017
+    ports:
+      - 27019:27017
+    restart: always
+    entrypoint:
+      [
+        '/usr/bin/mongod',
+        '--quiet',
+        '--logpath',
+        '/dev/null',
+        '--bind_ip_all',
+        '--replSet',
+        'rs0',
+        '--journal',
+        '--dbpath',
+        '/data/db',
+      ]
+    volumes:
+      - mongo_data3:/data
+
+volumes:
+  mongo_data1:
+  mongo_data2:
+  mongo_data3:
