--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
 version: '3'
 services:
-  redis-server: 
+  redis:
     image: 'redis'
+    volumes:
+      - redis_data:/data
   node-app:
     build: .
+    env_file:
+      - ./.env
+    restart: always
     ports:
       - "5000:5000"
     depends_on:
-      - redis-server
+      - redis
+
+volumes:
+  redis_data:
