--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,9 @@
 version: '3'
 
 services:
-  node-app:
+  app_server:
+    networks:
+      default:
     command: npm start
     environment:
       - MONGODB_URL=mongodb://mongo1:27017,mongo2:27018,mongo3:27019/enormoDB?retryWrites=true&w=majority
@@ -10,6 +12,20 @@ services:
       - mongo1
       - mongo2
       - mongo3
+  
+  app_nginx:
+    image: nginx:latest
+    container_name: nginx
+    restart: always
+    volumes:
+      - ./config/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 5000:80
+    networks:
+      default:
+    depends_on: 
+      - app_server
+
   mongo-setup:
     container_name: mongo-setup
     image: mongo
@@ -26,13 +42,14 @@ services:
 
   mongo1:
     hostname: mongo1
-    container_name: localmongo1
     image: mongo
     expose:
       - 27017
     ports:
       - 27017:27017
     restart: always
+    networks:
+      default:
     entrypoint:
       [
         '/usr/bin/mongod',
@@ -48,15 +65,17 @@ services:
       ]
     volumes:
       - mongo_data1:/data
+
   mongo2:
     hostname: mongo2
-    container_name: localmongo2
     image: mongo
     expose:
       - 27017
     ports:
       - 27018:27017
     restart: always
+    networks:
+      default:
     entrypoint:
       [
         '/usr/bin/mongod',
@@ -72,15 +91,17 @@ services:
       ]
     volumes:
       - mongo_data2:/data
+
   mongo3:
     hostname: mongo3
-    container_name: localmongo3
     image: mongo
     expose:
       - 27017
     ports:
       - 27019:27017
     restart: always
+    networks:
+      default:
     entrypoint:
       [
         '/usr/bin/mongod',
