--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     image: 'redis'
     volumes:
       - redis_data:/data
-  node-app:
+  app_server:
     build: .
     env_file:
       - ./.env
     restart: always
     ports:
-      - "5000:5000"
+      - "8989"
     depends_on:
       - redis
 
