--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   redis:
     image: 'redis'
     volumes:
-      - redis_data:/data
+      - ./volumes/redis:/data
   app_server:
     build: .
     env_file:
