--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,27 +1,27 @@
-# name: Deployment
+name: Deployment
 
-# on:
-#   push: 
-#     branches: [ main ]
+on:
+  push: 
+    branches: [ main ]
 
-# jobs:
-#   job_one:
-#     name: Deploy
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Pull latest code and build
-#       uses: appleboy/ssh-action@master
-#       with:
-#         host: ${{ secrets.SSH_HOST }}
-#         username: root
-#         key: ${{ secrets.SSH_SECRET }}
-#         port: 22
-#         script: |
-#           export NVM_DIR=~/.nvm
-#           source ~/.nvm/nvm.sh
-#           cd EnormoQB/Backend
-#           git checkout main
-#           git pull
-#           npm ci
-#           sudo scripts/updateContainer.sh
+jobs:
+  job_one:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: Pull latest code and build
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: root
+        key: ${{ secrets.SSH_SECRET }}
+        port: 22
+        script: |
+          export NVM_DIR=~/.nvm
+          source ~/.nvm/nvm.sh
+          cd EnormoQB/Backend
+          git checkout main
+          git pull
+          npm ci
+          sudo scripts/updateContainer.sh
 
