--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
-    "pdfmake": "^0.2.5"
+    "pdfmake": "^0.2.5",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
