optimized question queries, refactored code and added error logs with stacktrace in winston

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "no-console": "off",
     "no-underscore-dangle": "off",
     "no-process-exit": "off",
-    "operator-linebreak":"off"
+    "operator-linebreak":"off",
+    "object-curly-newline":"off"
   }
 }
