--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "enormoqb-server",
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "version": "2.0.0",
   "scripts": {
     "start": "node ./bin/www",
