--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,6 +22,6 @@ jobs:
           cd EnormoQB/Backend
           git checkout main
           git pull
-          npm i
+          npm ci
           sudo scripts/updateContainer.sh
 
