--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,3 +8,5 @@ services:
     environment:
       - NODE_ENV=development
       - REDIS_HOST=redis
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
