--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,16 @@
     "es6": true,
     "node": true
   },
-  "extends": ["airbnb-base", "plugin:node/recommended"],
+  "extends": [
+    "airbnb-base",
+    "plugin:node/recommended",
+    "plugin:prettier/recommended"
+  ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
-  "parserOptions": {
-    "ecmaVersion": 2018
-  },
+  "parserOptions": { "ecmaVersion": 2018 },
   "rules": {
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
@@ -23,7 +25,7 @@
     "no-process-exit": "off",
     "operator-linebreak": "off",
     "object-curly-newline": "off",
-    "no-await-in-loop":"off",
-    "no-param-reassign":"off"
+    "no-await-in-loop": "off",
+    "no-param-reassign": "off"
   }
 }
