--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.7",
     "node-fetch": "^2.6.7",
+    "nodemailer": "^6.7.7",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "pdfmake": "^0.2.5",
@@ -43,6 +43,7 @@
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "nodemon": "^1.19.4"
