--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,41 @@ services:
     image: 'redis'
     volumes:
       - ./volumes/redis:/data
+
   text_similarity:
     image: 'dishabhardwaj/textsimilarity_app:latest'
+
   app_server:
     build: .
     env_file:
       - ./.env
+    environment:
+      - REDIS_HOST=redis
     restart: always
     depends_on:
       - redis
       - text_similarity
+
+    networks:
+      default:
+    ports:
+      - "12400-12500:8989"
+    command: npm start
+    volumes:
+      - ./logs:/var/log
+
+  app_nginx:
+    image: nginx:latest
+    container_name: nginx
+    restart: always
+    volumes:
+      - ./config/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 5000:80
+    networks:
+      default:
+    depends_on: 
+      - app_server
 
 volumes:
   redis_data:
