--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d",
-    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build -d",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build -d",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up --build -d",
+    "docker": "docker-compose -f docker-compose.yml up --build -d",
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\""
   },
   "lint-staged": {
