SMTP port exposed

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,14 +4,15 @@ services:
   app_server:
     command: npm run dev
     ports:
-      - "5000:5000"
+      - '5000:5000'
+      - '465:465'
     env_file:
       - ./.env
     environment:
       - NODE_ENV=development
       - REDIS_HOST=redis
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - 'host.docker.internal:host-gateway'
     build: .
     restart: always
     depends_on:
