--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "*.js": "eslint --fix"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "admin-bro": "^4.0.1",
     "admin-bro-expressjs": "^2.1.1",
     "admin-bro-mongoose": "^0.5.2",
@@ -34,7 +35,6 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
-    "nodemailer": "^6.7.7",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "pdfmake": "^0.2.5",
