--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.2",
     "image-data-uri": "^2.0.1",
+    "limiter": "^2.1.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
