--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bull": "^4.8.5",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
@@ -40,6 +41,7 @@
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "pdfmake": "^0.2.5",
+    "streamifier": "^0.1.1",
     "winston": "^3.8.1"
   },
   "devDependencies": {
