--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "~4.16.0",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.2",
+    "html-to-pdfmake": "^2.4.5",
     "image-data-uri": "^2.0.1",
     "limiter": "^2.1.0",
     "moment": "^2.24.0",
